<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ff050505" >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listarContactos"
        android:id="@+id/btnListar"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/border"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/btnBuscar"
        android:layout_alignEnd="@+id/btnBuscar"
        android:layout_alignLeft="@+id/btnBuscar"
        android:layout_alignStart="@+id/btnBuscar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:textColor="#ffffffff"
        android:paddingLeft="2dp"
        android:textStyle="bold"
        android:paddingRight="2dp"
        android:text="@string/buscarContacto"
        android:id="@+id/btnBuscar"
        android:layout_below="@id/btnListar"
        android:layout_alignRight="@+id/btnAgregar"
        android:layout_alignEnd="@+id/btnAgregar"
        android:layout_alignLeft="@+id/btnAgregar"
        android:layout_alignStart="@+id/btnAgregar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregarContacto"
        android:background="@drawable/border"
        android:paddingLeft="2dp"
        android:textStyle="bold"
        android:paddingRight="2dp"
        android:textColor="#ffffffff"
        android:id="@+id/btnAgregar"
        android:layout_below="@+id/btnBuscar"
        android:layout_alignLeft="@+id/btnEliminar"
        android:layout_alignStart="@+id/btnEliminar"
        android:layout_alignRight="@+id/btnEliminar"
        android:layout_alignEnd="@+id/btnEliminar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminarContacto"
        android:background="@drawable/border"
        android:textStyle="bold"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:textColor="#ffffffff"
        android:id="@+id/btnEliminar"
        android:layout_below="@+id/btnAgregar"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/textView"
        android:textColor="#ffffffff"

        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/firma"
        android:textColor="#ffffff"
        android:gravity="center"
        android:id="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp" />
</RelativeLayout>
