<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_alignParentTop="true"
        android:stretchColumns="2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:lines="2"
                android:gravity="center_vertical"
                android:layout_weight="0.6"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/iDContacto" />

            <EditText
                android:inputType="number"
                android:ems="10"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="2dp"
                android:background="@drawable/border"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/etIDContacto"

                />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                android:lines="2"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nombre" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:paddingLeft="5dp"
                android:paddingRight="2dp"
                android:id="@+id/etNombre"
                android:inputType="textPersonName"
                android:ems="10"
             />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:paddingLeft="5dp"
                android:lines="2"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/apellido1" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="2dp"
                android:background="@drawable/border"
                android:id="@+id/etApellido1"
                android:inputType="textPersonName"
                android:ems="10"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:textStyle="bold"
                android:lines="2"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/apellido2" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="2dp"
                android:inputType="textPersonName"
                android:background="@drawable/border"
                android:ems="10"
                android:id="@+id/etApellido2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:paddingLeft="5dp"
                android:lines="2"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/telefonoCelular" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:background="@drawable/border"
                android:paddingRight="2dp"
                android:inputType="phone"
                android:id="@+id/etCelular"
                android:ems="10" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:lines="2"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/telefonoCasa" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="phone"
                android:ems="10"
                android:background="@drawable/border"
                android:paddingLeft="5dp"
                android:paddingRight="2dp"
                android:id="@+id/etCasa" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                android:lines="3"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/direccion" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="2dp"
                android:background="@drawable/border"
                android:id="@+id/etDireccion"
                android:inputType="textMultiLine"
                android:ems="10" />


        </TableRow>
    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/llBotones" >

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="@string/cancelar"
            android:id="@+id/btnCancelar" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:layout_height="wrap_content"
            android:id="@+id/btnPositivo"/>
    </LinearLayout>

</RelativeLayout>